@@ -180,6 +180,74 @@ unsigned char sys_p1_code_spin[] = {
   0x70, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x6d, 0x6f, 0x76, 0x20, 0x20, 0x20,
   0x20, 0x72, 0x2c, 0x20, 0x72, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x31, 0x0a,
   0x20, 0x20, 0x65, 0x6e, 0x64, 0x61, 0x73, 0x6d, 0x0a, 0x20, 0x20, 0x72,
-  0x65, 0x74, 0x75, 0x72, 0x6e, 0x20, 0x72, 0x0a, 0x00
+  0x65, 0x74, 0x75, 0x72, 0x6e, 0x20, 0x72, 0x0a, 0x0a, 0x70, 0x72, 0x69,
+  0x20, 0x5f, 0x5f, 0x62, 0x75, 0x69, 0x6c, 0x74, 0x69, 0x6e, 0x5f, 0x70,
+  0x72, 0x6f, 0x70, 0x65, 0x6c, 0x6c, 0x65, 0x72, 0x5f, 0x64, 0x69, 0x72,
+  0x6c, 0x28, 0x70, 0x69, 0x6e, 0x29, 0x20, 0x7c, 0x20, 0x6d, 0x61, 0x73,
+  0x6b, 0x0a, 0x20, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x20, 0x3a, 0x3d, 0x20,
+  0x31, 0x3c, 0x3c, 0x70, 0x69, 0x6e, 0x0a, 0x20, 0x20, 0x44, 0x49, 0x52,
+  0x41, 0x20, 0x26, 0x3d, 0x20, 0x21, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x0a,
+  0x70, 0x72, 0x69, 0x20, 0x5f, 0x5f, 0x62, 0x75, 0x69, 0x6c, 0x74, 0x69,
+  0x6e, 0x5f, 0x70, 0x72, 0x6f, 0x70, 0x65, 0x6c, 0x6c, 0x65, 0x72, 0x5f,
+  0x64, 0x69, 0x72, 0x68, 0x28, 0x70, 0x69, 0x6e, 0x29, 0x20, 0x7c, 0x20,
+  0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x20, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x20,
+  0x3a, 0x3d, 0x20, 0x31, 0x3c, 0x3c, 0x70, 0x69, 0x6e, 0x0a, 0x20, 0x20,
+  0x44, 0x49, 0x52, 0x41, 0x20, 0x7c, 0x3d, 0x20, 0x6d, 0x61, 0x73, 0x6b,
+  0x0a, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x5f, 0x62, 0x75, 0x69, 0x6c,
+  0x74, 0x69, 0x6e, 0x5f, 0x70, 0x72, 0x6f, 0x70, 0x65, 0x6c, 0x6c, 0x65,
+  0x72, 0x5f, 0x64, 0x69, 0x72, 0x6e, 0x6f, 0x74, 0x28, 0x70, 0x69, 0x6e,
+  0x29, 0x20, 0x7c, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x20, 0x20, 0x6d,
+  0x61, 0x73, 0x6b, 0x20, 0x3a, 0x3d, 0x20, 0x31, 0x3c, 0x3c, 0x70, 0x69,
+  0x6e, 0x0a, 0x20, 0x20, 0x44, 0x49, 0x52, 0x41, 0x20, 0x5e, 0x3d, 0x20,
+  0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x5f,
+  0x62, 0x75, 0x69, 0x6c, 0x74, 0x69, 0x6e, 0x5f, 0x70, 0x72, 0x6f, 0x70,
+  0x65, 0x6c, 0x6c, 0x65, 0x72, 0x5f, 0x64, 0x69, 0x72, 0x28, 0x70, 0x69,
+  0x6e, 0x2c, 0x20, 0x63, 0x29, 0x20, 0x7c, 0x20, 0x6d, 0x61, 0x73, 0x6b,
+  0x0a, 0x20, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x20, 0x3a, 0x3d, 0x20, 0x31,
+  0x3c, 0x3c, 0x70, 0x69, 0x6e, 0x0a, 0x20, 0x20, 0x69, 0x66, 0x20, 0x28,
+  0x63, 0x29, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x44, 0x49, 0x52, 0x41, 0x20,
+  0x7c, 0x3d, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x20, 0x20, 0x65, 0x6c,
+  0x73, 0x65, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x44, 0x49, 0x52, 0x41, 0x20,
+  0x26, 0x3d, 0x20, 0x21, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x0a, 0x70, 0x72,
+  0x69, 0x20, 0x5f, 0x5f, 0x62, 0x75, 0x69, 0x6c, 0x74, 0x69, 0x6e, 0x5f,
+  0x70, 0x72, 0x6f, 0x70, 0x65, 0x6c, 0x6c, 0x65, 0x72, 0x5f, 0x64, 0x72,
+  0x76, 0x6c, 0x28, 0x70, 0x69, 0x6e, 0x29, 0x20, 0x7c, 0x20, 0x6d, 0x61,
+  0x73, 0x6b, 0x0a, 0x20, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x20, 0x3a, 0x3d,
+  0x20, 0x31, 0x3c, 0x3c, 0x70, 0x69, 0x6e, 0x0a, 0x20, 0x20, 0x44, 0x49,
+  0x52, 0x41, 0x20, 0x7c, 0x3d, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x20,
+  0x20, 0x4f, 0x55, 0x54, 0x41, 0x20, 0x26, 0x3d, 0x20, 0x21, 0x6d, 0x61,
+  0x73, 0x6b, 0x0a, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x5f, 0x62, 0x75,
+  0x69, 0x6c, 0x74, 0x69, 0x6e, 0x5f, 0x70, 0x72, 0x6f, 0x70, 0x65, 0x6c,
+  0x6c, 0x65, 0x72, 0x5f, 0x64, 0x72, 0x76, 0x68, 0x28, 0x70, 0x69, 0x6e,
+  0x29, 0x20, 0x7c, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x20, 0x20, 0x6d,
+  0x61, 0x73, 0x6b, 0x20, 0x3a, 0x3d, 0x20, 0x31, 0x3c, 0x3c, 0x70, 0x69,
+  0x6e, 0x0a, 0x20, 0x20, 0x44, 0x49, 0x52, 0x41, 0x20, 0x7c, 0x3d, 0x20,
+  0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x20, 0x20, 0x4f, 0x55, 0x54, 0x41, 0x20,
+  0x7c, 0x3d, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x0a, 0x70, 0x72, 0x69,
+  0x20, 0x5f, 0x5f, 0x62, 0x75, 0x69, 0x6c, 0x74, 0x69, 0x6e, 0x5f, 0x70,
+  0x72, 0x6f, 0x70, 0x65, 0x6c, 0x6c, 0x65, 0x72, 0x5f, 0x64, 0x72, 0x76,
+  0x6e, 0x6f, 0x74, 0x28, 0x70, 0x69, 0x6e, 0x29, 0x20, 0x7c, 0x20, 0x6d,
+  0x61, 0x73, 0x6b, 0x0a, 0x20, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x20, 0x3a,
+  0x3d, 0x20, 0x31, 0x3c, 0x3c, 0x70, 0x69, 0x6e, 0x0a, 0x20, 0x20, 0x44,
+  0x49, 0x52, 0x41, 0x20, 0x7c, 0x3d, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x0a,
+  0x20, 0x20, 0x4f, 0x55, 0x54, 0x41, 0x20, 0x5e, 0x3d, 0x20, 0x6d, 0x61,
+  0x73, 0x6b, 0x0a, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x5f, 0x62, 0x75,
+  0x69, 0x6c, 0x74, 0x69, 0x6e, 0x5f, 0x70, 0x72, 0x6f, 0x70, 0x65, 0x6c,
+  0x6c, 0x65, 0x72, 0x5f, 0x64, 0x72, 0x76, 0x28, 0x70, 0x69, 0x6e, 0x2c,
+  0x20, 0x63, 0x29, 0x20, 0x7c, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x20,
+  0x20, 0x6d, 0x61, 0x73, 0x6b, 0x20, 0x3a, 0x3d, 0x20, 0x31, 0x3c, 0x3c,
+  0x70, 0x69, 0x6e, 0x0a, 0x20, 0x20, 0x44, 0x49, 0x52, 0x41, 0x20, 0x7c,
+  0x3d, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x20, 0x20, 0x69, 0x66, 0x20,
+  0x28, 0x63, 0x29, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x4f, 0x55, 0x54, 0x41,
+  0x20, 0x7c, 0x3d, 0x20, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x20, 0x20, 0x65,
+  0x6c, 0x73, 0x65, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x4f, 0x55, 0x54, 0x41,
+  0x20, 0x26, 0x3d, 0x20, 0x21, 0x6d, 0x61, 0x73, 0x6b, 0x0a, 0x0a, 0x70,
+  0x72, 0x69, 0x20, 0x5f, 0x5f, 0x62, 0x75, 0x69, 0x6c, 0x74, 0x69, 0x6e,
+  0x5f, 0x70, 0x72, 0x6f, 0x70, 0x65, 0x6c, 0x6c, 0x65, 0x72, 0x5f, 0x77,
+  0x61, 0x69, 0x74, 0x78, 0x28, 0x74, 0x69, 0x6d, 0x29, 0x0a, 0x20, 0x20,
+  0x61, 0x73, 0x6d, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x61, 0x64, 0x64, 0x20,
+  0x20, 0x74, 0x69, 0x6d, 0x2c, 0x20, 0x43, 0x4e, 0x54, 0x0a, 0x20, 0x20,
+  0x20, 0x20, 0x77, 0x61, 0x69, 0x74, 0x63, 0x6e, 0x74, 0x20, 0x74, 0x69,
+  0x6d, 0x0a, 0x20, 0x20, 0x65, 0x6e, 0x64, 0x61, 0x73, 0x6d, 0x0a, 0x00
 };
-unsigned int sys_p1_code_spin_len = 2180;
+unsigned int sys_p1_code_spin_len = 2999;
